// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/requests DELETE / /:requestId - delete a request 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/requests GET / get all requests 1`] = `
Object {
  "entities": Object {
    "requests": Object {
      "272d86fc-f743-4cd6-b0c8-7906959bcc9f": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "endDate": "2017-07-19T00:17:30.932Z",
        "id": "272d86fc-f743-4cd6-b0c8-7906959bcc9f",
        "isCancelled": false,
        "isConfirmed": false,
        "patientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "serviceId": "c5beec65-73a0-4b58-ba48-65986931d054",
        "startDate": "2017-07-19T00:16:30.932Z",
      },
    },
  },
  "result": Array [
    "272d86fc-f743-4cd6-b0c8-7906959bcc9f",
  ],
}
`;

exports[`/api/requests POST / create request 1`] = `
Object {
  "entities": Object {
    "requests": Object {
      "272d86fc-f743-4cd6-b0c8-7906959bcc9f": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "endDate": "2017-07-19T00:17:30.932Z",
        "id": "272d86fc-f743-4cd6-b0c8-7906959bcc9f",
        "isCancelled": false,
        "isConfirmed": false,
        "patientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "serviceId": "c5beec65-73a0-4b58-ba48-65986931d054",
        "startDate": "2017-07-19T00:16:30.932Z",
      },
    },
  },
  "result": "272d86fc-f743-4cd6-b0c8-7906959bcc9f",
}
`;

exports[`/api/requests PUT / /:requestId - reject request 1`] = `
Object {
  "entities": Object {
    "requests": Object {
      "272d86fc-f743-4cd6-b0c8-7906959bcc9f": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "endDate": "2017-07-19T00:17:30.932Z",
        "id": "272d86fc-f743-4cd6-b0c8-7906959bcc9f",
        "isCancelled": true,
        "isConfirmed": false,
        "patientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "serviceId": "c5beec65-73a0-4b58-ba48-65986931d054",
        "startDate": "2017-07-19T00:16:30.932Z",
      },
    },
  },
  "result": "272d86fc-f743-4cd6-b0c8-7906959bcc9f",
}
`;

exports[`/api/requests PUT / /:requestId - update request 1`] = `
Object {
  "entities": Object {
    "requests": Object {
      "272d86fc-f743-4cd6-b0c8-7906959bcc9f": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "endDate": "2017-07-19T00:18:30.932Z",
        "id": "272d86fc-f743-4cd6-b0c8-7906959bcc9f",
        "isCancelled": false,
        "isConfirmed": false,
        "patientUserId": "b8665c97-1e98-41ac-bf13-090b742de400",
        "serviceId": "c5beec65-73a0-4b58-ba48-65986931d054",
        "startDate": "2017-07-19T00:16:30.932Z",
      },
    },
  },
  "result": "272d86fc-f743-4cd6-b0c8-7906959bcc9f",
}
`;

exports[`/api/requests PUT / /:requestId/confirm/:appointmentId - send confirmed request email 1`] = `
Object {
  "entities": Object {},
}
`;
